# flatbuffers-owned

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: basic.rs
tests/generated_fbs/: foo.rs
