[package]
name = "flatbuffers-owned"
authors = ["Florian Gäbler"]
description = "This minimal library provides a macro and a trait to create a FlatBuffer newtype that owns its data. An owned FlatBuffer allows you to freely move it around without worrying about the lifetime of the data's origin."
license = "MIT"
license-file = "LICENSE"
documentation = "https://docs.rs/flatbuffers-owned"
repository = "https://github.com/florian-g2/flatbuffers-owned"
keywords = ["flatbuffers", "serialization", "owned"]
categories = ["data-structures", "memory-management"]
version = "0.1.0"
readme = "README.md"
edition = "2018"

[dependencies]
flatbuffers = "23.1.21"
paste = "1.0.6"

[lib]
doctest = false