[package]
name = "flatbuffers-owned"
authors = ["Florian Gäbler"]
description = "This small Rust crate provides a wrapper struct for generated Rust FlatBuffers that allows them to be used as owned types."
license = "MIT"
documentation = "https://docs.rs/flatbuffers-owned"
repository = "https://github.com/florian-g2/flatbuffers-owned"
keywords = ["flatbuffers", "serialization", "owned"]
categories = ["data-structures", "memory-management"]
version = "0.1.1"
readme = "README.md"
edition = "2018"

[dependencies]
flatbuffers = "23.1.21"
paste = "1.0.6"

[lib]
doctest = false