[package]
name = "flatbuffers-owned"
authors = ["Florian Gäbler"]
description = "A Rust crate that enables a more flexible usage of FlatBuffers."
license = "MIT"
documentation = "https://docs.rs/flatbuffers-owned"
repository = "https://github.com/florian-g2/flatbuffers-owned"
keywords = ["flatbuffers", "serialization", "owned"]
categories = ["data-structures", "memory-management"]
version = "0.2.0"
readme = "README.md"
edition = "2018"

[dependencies]
flatbuffers = "24"
paste = "1.0.14"

[lib]
doctest = false